CREATE TABLE detail (
  detail_id   SERIAL      NOT NULL,
  detail_name VARCHAR(64) NOT NULL,
  PRIMARY KEY (detail_id));